--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+}
+
+body {
+    overflow: hidden;
+}
+
+@layer utilities {
+    .region-drag {
+        -webkit-app-region: drag;
+        app-region: drag;
+        user-select: none;
+    }
+
+    .region-no-drag {
+        -webkit-app-region: no-drag;
+        app-region: no-drag;
+    }
+}
