--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,7 @@ body {
     }
     
     ::-webkit-scrollbar {
-        @apply w-3;
+        @apply w-3 h-3;
     }
     
     ::-webkit-scrollbar-track {
